# chatapp-evaltools-cli

./: README.md  pyproject.toml
.github/workflows/: publish.yaml  python.yaml
src/: cli.py  summary_app.py
src/chatapp_evaltools/: __main__.py  cli.py
src/chatapp_evaltools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: main_test.py
